--- a/src/index.css
+++ b/src/index.css
@@ -2,18 +2,33 @@
 @tailwind components;
 @tailwind utilities;
 
+@layer components {
+  .btn-primary {
+    @apply rounded-md bg-pro-300 font-bold text-pro-50 transition-colors hover:bg-pro-200 disabled:bg-pro-200;
+  }
+  .btn-secondary {
+    @apply rounded-md bg-pro-50 font-bold text-pro-300 transition-colors hover:bg-pro-100 disabled:bg-pro-100;
+  }
+  .btn-light {
+    @apply rounded-md text-progray-200 transition-colors hover:bg-progray-100;
+  }
+  .flex-center {
+    @apply flex items-center justify-center;
+  }
+}
+
 ::-webkit-scrollbar {
   width: 5px;
 }
 
 ::-webkit-scrollbar-track {
   background: transparent;
-  border-radius: 10px;
+  border-radius: 5px;
 }
 
 ::-webkit-scrollbar-thumb {
   background: #f5f5f5; /* progray-100 */
-  border-radius: 10px;
+  border-radius: 5px;
 }
 
 @keyframes fade-in {
@@ -22,15 +37,6 @@
   }
   100% {
     opacity: 1;
-  }
-}
-
-@keyframes fade-out {
-  0% {
-    opacity: 1;
-  }
-  100% {
-    opacity: 0;
   }
 }
 
