Refactor auth components and add ScreenBox component
- Added a new `ScreenBox` component that centers its children on the screen, applies a fade-in animation, and has a background color.
- Updated the CSS styles for headings and paragraphs in the `index.css` file.
- Refactored the `ImageFormBox` component to use the new `ScreenBox` component for better code organization and reusability.
- Refactored the `MiniFormBox` component to use the new `ScreenBox` component for better code organization and reusability.
- Updated the `SuccessMessage` component to use the new `ScreenBox` component for better code organization and reusability.

The changes in this commit improve the code structure and introduce a new component for better code organization and reusability

--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,21 @@
 @tailwind components;
 @tailwind utilities;
 
+@layer base {
+  h1 {
+    @apply text-2xl font-bold capitalize text-progray-300 sm:text-3xl;
+  }
+  h2 {
+    @apply text-xl font-bold capitalize text-progray-300 sm:text-2xl;
+  }
+  h3 {
+    @apply text-lg font-bold capitalize text-progray-300 sm:text-xl;
+  }
+  p {
+    @apply text-progray-200;
+  }
+}
+
 @layer components {
   .btn-primary {
     @apply rounded-md bg-pro-300 font-bold text-pro-50 transition-colors hover:bg-pro-200 disabled:bg-pro-200;
