--- a/src/index.css
+++ b/src/index.css
@@ -15,6 +15,9 @@
   p {
     @apply text-progray-200;
   }
+  a {
+    @apply text-pro-300;
+  }
 }
 
 @layer components {
@@ -33,7 +36,7 @@
 }
 
 ::-webkit-scrollbar {
-  width: 5px;
+  width: 10px;
 }
 
 ::-webkit-scrollbar-track {
@@ -44,6 +47,7 @@
 ::-webkit-scrollbar-thumb {
   background: #f5f5f5; /* progray-100 */
   border-radius: 5px;
+  border: 2.5px white solid;
 }
 
 @keyframes fade-in {
