--- a/src/index.css
+++ b/src/index.css
@@ -3,6 +3,9 @@
 @tailwind utilities;
 
 @layer base {
+  * {
+    @apply rounded-xl;
+  }
   h1 {
     @apply text-2xl font-bold capitalize text-progray-300 sm:text-3xl;
   }
@@ -22,38 +25,20 @@
 
 @layer components {
   .btn-primary {
-    @apply rounded-xl bg-pro-300 font-bold text-pro-50 transition-colors hover:bg-pro-200 disabled:bg-pro-200;
+    @apply bg-pro-300 font-bold text-pro-50 transition-colors hover:bg-pro-200 disabled:bg-pro-200;
   }
   .btn-secondary {
-    @apply rounded-xl bg-pro-50 font-bold text-pro-300 transition-colors hover:bg-pro-100 disabled:bg-pro-100;
+    @apply bg-pro-50 font-bold text-pro-300 transition-colors hover:bg-pro-100 disabled:bg-pro-100;
   }
   .btn-light {
-    @apply rounded-xl text-progray-200 transition-colors hover:bg-progray-100;
+    @apply text-progray-200 transition-colors hover:bg-progray-50;
   }
   .flex-center {
     @apply flex items-center justify-center;
   }
-  .auth-box {
-    @apply flex h-full w-full animate-fade-in-fast bg-white p-6 sm:h-fit sm:w-fit sm:rounded-2xl sm:p-12 sm:shadow-lg;
-  }
   .nav-link {
-    @apply flex-center h-12 w-12 rounded-2xl;
+    @apply flex-center h-12 w-12 rounded-2xl transition-colors;
   }
-}
-
-::-webkit-scrollbar {
-  width: 10px;
-}
-
-::-webkit-scrollbar-track {
-  background: transparent;
-  border-radius: 5px;
-}
-
-::-webkit-scrollbar-thumb {
-  background: #f5f5f5;
-  border-radius: 5px;
-  border: 2.5px white solid;
 }
 
 @keyframes fade-in {
@@ -72,4 +57,24 @@
   100% {
     width: 100%;
   }
+}
+
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+::-webkit-scrollbar-track {
+  background: transparent;
+  border-radius: 5px;
+}
+
+::-webkit-scrollbar-thumb {
+  background: #DDD;
+  border-radius: 5px;
+  border: 2.5px white solid;
+}
+
+/* Change the input autofill background color */
+input:-webkit-autofill {
+  -webkit-background-clip: text;
 }
