Refactor UI styles and colors

--- a/src/index.css
+++ b/src/index.css
@@ -4,19 +4,27 @@
 
 @layer base {
   * {
-    @apply rounded-xl selection:bg-pro-300 selection:text-pro-50;
+    @apply selection:bg-pro-300 selection:text-white;
+  }
+  h1,
+  h2,
+  h3,
+  h4,
+  h5,
+  h6 {
+    @apply font-bold capitalize text-gray-800;
   }
   h1 {
-    @apply text-2xl font-bold capitalize text-progray-300 sm:text-3xl;
+    @apply text-2xl sm:text-3xl;
   }
   h2 {
-    @apply text-xl font-bold capitalize text-progray-300 sm:text-2xl;
+    @apply text-xl sm:text-2xl;
   }
   h3 {
-    @apply text-lg font-bold capitalize text-progray-300 sm:text-xl;
+    @apply text-lg sm:text-xl;
   }
   p {
-    @apply text-sm text-progray-200 sm:text-base;
+    @apply text-sm text-gray-500 sm:text-base;
   }
   a {
     @apply text-pro-300;
@@ -31,7 +39,7 @@
     @apply bg-pro-50 font-bold text-pro-300 transition-colors hover:bg-pro-100 disabled:bg-pro-100;
   }
   .btn-light {
-    @apply text-progray-200 transition-colors hover:bg-progray-50;
+    @apply text-gray-500 transition-colors hover:bg-gray-100;
   }
   .flex-center {
     @apply flex items-center justify-center;
@@ -96,7 +104,7 @@
 }
 
 ::-webkit-scrollbar-thumb {
-  background: #DDD;
+  background: #ddd;
   border-radius: 5px;
   border: 2.5px white solid;
 }
@@ -113,6 +121,6 @@ input:-webkit-autofill {
 
 /* Hide scrollbar for IE, Edge and Firefox */
 .scrollbar-hide {
-  -ms-overflow-style: none;  /* IE and Edge */
-  scrollbar-width: none;  /* Firefox */
+  -ms-overflow-style: none; /* IE and Edge */
+  scrollbar-width: none; /* Firefox */
 }
